<resources>
    <string name="app_name">CleanStreets</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string-array name="size_options">
        <!-- <item>Very small</item> -->
        <item>Small</item>
        <item>Medium</item>
        <item>Large</item>
        <!-- <item>Very large</item> -->
    </string-array>

    <string-array name="urgency_options">
        <item>Not urgent</item>
        <!-- <item>Low urgency</item> -->
        <item>Urgent</item>
        <!-- <item>High urgency</item> -->
        <item>Very urgent</item>
    </string-array>

    <string-array name="postcode_options">
        <item>Dublin 1 (D1)</item>
        <item>Dublin 2 (D2)</item>
        <item>Dublin 3 (D3): North Strand, Fairview, Clontarf</item>
        <item>Dublin 4 (D4): Ringsend, Sandymount, Ballsbridge, Donnybrook</item>
        <item>Dublin 5 (D5): Raheny</item>
        <item>Dublin 6 (D6): Ranelagh, Rathmines, Rathgar, Dartry, Milltown</item>
        <item>Dublin 6 West (D6W): Harold\'s Cross, Terenure, Kimmage</item>
        <item>Dublin 7 (D7)</item>
        <item>Dublin 8 (D8): Kilmainham, Inchicore, Dolphin\'s Barn</item>
        <item>Dublin 9 (D9): Whitehall</item>
        <item>Dublin 10 (D10): Ballyfermot</item>
        <item>Dublin 11 (D11): Finglas</item>
        <item>Dublin 12 (D12): Crumlin, Drimnagh, Walkinstown</item>
        <item>Dublin 13 (D13): Bayside, Sutton, Baldoyle, Howth</item>
        <item>Dublin 14 (D14): Churchtown, Dundrum, Balally, Rathfarnham</item>
        <item>Dublin 15 (D15): Castleknock, Clonsilla, Blanchardstown</item>
        <item>Dublin 16 (D16): Lesser Dundrum, Ballinteer, Sandyford</item>
        <item>Dublin 17 (D17): Coolock</item>
        <item>Dublin 18 (D18): Foxrock, Cornelscourt, Cabinteely, Stepaside</item>
        <item>Dublin 20 (D20): Lucan, Palmerstown</item>
        <item>Dublin 22 (D22): Clondalkin</item>
        <item>Dublin 24 (D24): Tallaght</item>
    </string-array>

    <string-array name="tags_options">
        <item>Fundraiser</item>
        <item>Cleanup</item>
        <item>Online meeting</item>
        <item>In-person meeting</item>
        <item>Help</item>
    </string-array>

    <string-array name="status_options">
        <item>Active</item>
        <item>In-progress</item>
        <item>Completed</item>
    </string-array>

    <string name="title_activity_maps_test">MapsActivityTEST</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign up</string>
    <string name="use_as_guest">use as Guest</string>
    <string name="dcc_login">DCC Login</string>
    <string name="cleanstreets_logo">CleanStreets Logo</string>
    <string name="font_size">Font Size</string>
    <string name="example_text">Example Text</string>
    <string name="app_colours">App Colours</string>
    <string name="simplify_colours">Simplify Colours</string>
    <string name="app_tutorial">App Tutorial</string>
    <string name="be_yourself">Be yourself.</string>
    <string name="new_username_here">New username here</string>
    <string name="email">Email:</string>
    <string name="new_email_here">New email here</string>
    <string name="password">Password:</string>
    <string name="new_password_here">New password here</string>
    <string name="update_username">Update username</string>
    <string name="change_password">change Password</string>
    <string name="delete_account">Delete Account</string>
    <string name="username">Username:</string>
    <string name="post_title">Post Title</string>
    <string name="organising_an_event">Organising an event...?</string>
    <string name="details">Details</string>
    <string name="enter_details_about_your_post">Enter details about your post!</string>
    <string name="referenced_report">Referenced Report:</string>
    <string name="postcode">Postcode</string>
    <string name="tags">Tags</string>
    <string name="submit_post">Submit Post</string>
    <string name="report_title">Report Title</string>
    <string name="small_cleanstreets_logo">small cleanstreets logo</string>
    <string name="eg_broken_glass">eg. broken glass</string>
    <string name="location">Location:</string>
    <string name="map">Map</string>
    <string name="size">Size</string>
    <string name="urgency">Urgency</string>
    <string name="attachment_optional">Attachment (optional)</string>
    <string name="image_view_of_report">image view of report</string>
    <string name="submit_report">Submit Report</string>
    <string name="camera">camera</string>
    <string name="thank_you">Thank you.</string>
    <string name="ex_new_report_title">ex. new report title</string>
    <string name="amend_report">Amend Report</string>
    <string name="report_sizes_distribution">Report Sizes Distribution</string>
    <string name="reports_with_images">Reports with images</string>
    <string name="post_tags_distribution">Post Tags Distribution</string>
    <string name="report_status">Report status</string>
    <string name="reports_made">Reports made</string>
    <string name="no_replies_yet">No replies yet.</string>
    <string name="send_a_reply">Send a reply</string>
    <string name="detailed_post_image">Detailed Post Image</string>
    <string name="edit_report">Edit Report</string>
    <string name="reports">Reports</string>
    <string name="welcome_back">Welcome back.</string>
    <string name="go_back">go back</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="reset_password">Reset Password</string>
    <string name="add_post">Add Post</string>
    <string name="don_t_forget_it">Don\'t forget it.</string>
    <string name="join_the_club">Join the club!</string>
    <string name="register">Register</string>
    <string name="type_your_reply_here_be_nice">Type your reply here, be nice!</string>
    <string name="send_reply">Send Reply</string>
    <string name="find_nearest_report">Find nearest report</string>
    <string name="route_finder">Route Finder</string>
    <string name="select_status">Select Status:</string>
    <string name="confirm">Confirm</string>
    <string name="you_haven_t_made_any_reports">You haven\'t made any reports!</string>
    <string name="thumbs_up_icon">thumbs up icon</string>
    <string name="delete_icon">delete icon</string>
    <string name="noticeboard">Noticeboard</string>
</resources>