<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="10dp">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/main_logo_white"
        android:layout_marginBottom="0dp"
        android:layout_marginTop="0dp"
        android:contentDescription="@string/cleanstreets_logo" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/join_the_club"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="25sp"
        android:layout_marginBottom="50dp"
        android:textStyle="italic"
        android:layout_gravity="center"/>

    <EditText
        android:id="@+id/editTextUsername"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:textColor="@color/colorPrimaryDark"
        android:backgroundTint="#807A77"
        android:textColorHint="#807A77"
        android:hint="@string/username"
        android:autofillHints="username"
        android:inputType="text" />

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:textColor="@color/colorPrimaryDark"
        android:backgroundTint="#807A77"
        android:textColorHint="#807A77"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:autofillHints="emailAddress" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:textColor="@color/colorPrimaryDark"
        android:backgroundTint="#807A77"
        android:textColorHint="#807A77"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:autofillHints="password" />

    <Button
        android:id="@+id/buttonRegister"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        app:backgroundTint="@color/colorSecondary"
        android:background="@drawable/round_corner"
        android:layout_marginTop="55dp"
        android:textSize="25sp"
        android:text="@string/register" />

    <Button
        android:id="@+id/buttonReturn"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        app:backgroundTint="@color/colorSecondary"
        android:background="@drawable/round_corner"
        android:layout_marginTop="20dp"
        android:textSize="25sp"
        android:text="@string/go_back" />

</LinearLayout>