<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorPrimary"
    android:padding="16dp">

    <ImageView
        android:id="@+id/logoImageView"
        android:layout_width="wrap_content"
        android:layout_height="140dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/secondary_lb"
        android:contentDescription="@string/cleanstreets_logo" />

    <TextView
        android:id="@+id/textViewSubtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/don_t_forget_it"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="25sp"
        android:textStyle="italic"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/logoImageView"
        android:layout_marginBottom="150dp" />

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="260dp"
        android:layout_height="48dp"
        android:layout_below="@id/textViewSubtitle"
        android:backgroundTint="#807A77"
        android:textColorHint="#807A77"
        android:textColor="@color/colorPrimaryDark"
        android:hint="@string/email"
        android:layout_centerHorizontal="true"
        android:inputType="textEmailAddress"
        android:autofillHints="emailAddress" />

    <Button
        android:id="@+id/buttonResetPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTextEmail"
        android:layout_centerHorizontal="true"
        app:backgroundTint="@color/colorSecondary"
        android:background="@drawable/round_corner"
        android:textSize="25sp"
        android:layout_marginTop="20dp"
        android:text="@string/reset_password" />

</RelativeLayout>