<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorPrimary"
    android:padding="16dp"
    tools:context=".AddReportActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:src="@drawable/logomark_lb"
        android:layout_toRightOf="@id/text_view_post"
        android:layout_marginTop="110dp"
        android:layout_marginStart="20dp"
        android:contentDescription="@string/small_cleanstreets_logo" />

    <TextView
        android:id="@+id/text_view_post"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:text="@string/post_title"
        android:textStyle="italic|bold"
        android:paddingEnd="15dp"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="29sp"
        android:textAppearance="?android:textAppearanceMedium"
        tools:ignore="RtlSymmetry" />

    <EditText
        android:id="@+id/edit_text_post_title"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:backgroundTint="#807A77"
        android:textColorHint="#807A77"
        android:layout_below="@id/text_view_post"
        android:layout_marginTop="8dp"
        android:textColor="@color/colorPrimaryDark"
        android:hint="@string/organising_an_event"
        android:inputType="text"
        android:autofillHints="text" />

    <TextView
        android:id="@+id/text_view_content"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/edit_text_post_title"
        android:layout_marginTop="16dp"
        android:text="@string/details"
        android:paddingEnd="15dp"
        android:textStyle="italic|bold"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="20sp"
        android:textAppearance="?android:textAppearanceMedium"
        tools:ignore="RtlSymmetry" />

    <EditText
        android:id="@+id/edit_text_post_content"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:backgroundTint="#807A77"
        android:textColorHint="#807A77"
        android:layout_below="@id/text_view_content"
        android:layout_marginTop="8dp"
        android:textColor="@color/colorPrimaryDark"
        android:hint="@string/enter_details_about_your_post"
        android:inputType="text"
        android:autofillHints="text" />

    <TextView
        android:id="@+id/text_view_refReport"
        android:layout_width="210dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/edit_text_post_content"
        android:layout_marginTop="16dp"
        android:text="@string/referenced_report"
        android:paddingEnd="15dp"
        android:textStyle="italic|bold"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="20sp"
        android:textAppearance="?android:textAppearanceMedium"
        tools:ignore="RtlSymmetry" />

    <Spinner
        android:id="@+id/spinner_refReport"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_toEndOf="@id/text_view_refReport"
        android:layout_below="@id/edit_text_post_content"
        android:layout_marginTop="8dp"
        android:backgroundTint="#807A77"
        android:textColorHint="#807A77"/>

    <TextView
        android:id="@+id/text_view_postcode"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/spinner_refReport"
        android:layout_marginTop="16dp"
        android:paddingEnd="15dp"
        android:text="@string/postcode"
        android:textStyle="italic|bold"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="20sp"
        android:textAppearance="?android:textAppearanceMedium"
        tools:ignore="RtlSymmetry" />

    <Spinner
        android:id="@+id/spinner_postcode"
        android:layout_width="150dp"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:layout_toEndOf="@id/text_view_postcode"
        android:layout_below="@id/spinner_refReport"
        android:layout_marginStart="16dp"
        android:backgroundTint="#807A77"
        android:textColorHint="#807A77"
        android:entries="@array/postcode_options" />

    <TextView
        android:id="@+id/text_view_tags"
        android:layout_width="65dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/spinner_postcode"
        android:layout_marginTop="16dp"
        android:text="@string/tags"
        android:paddingEnd="15dp"
        android:textStyle="italic|bold"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="20sp"
        android:textAppearance="?android:textAppearanceMedium"
        tools:ignore="RtlSymmetry" />

    <Spinner
        android:id="@+id/spinner_tags"
        android:layout_width="150dp"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:layout_toEndOf="@id/text_view_postcode"
        android:layout_below="@id/spinner_postcode"
        android:layout_marginStart="16dp"
        android:backgroundTint="#807A77"
        android:textColorHint="#807A77"
        android:entries="@array/tags_options" />

    <Button
        android:id="@+id/button_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_below="@id/spinner_tags"
        android:layout_centerHorizontal="true"
        android:textSize="25sp"
        android:textStyle="bold"
        android:background="@drawable/round_corner"
        android:text="@string/submit_post"
        android:textColor="@color/colorSecondary"
        app:backgroundTint="@color/colorPrimaryDark"/>

</RelativeLayout>
