<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorPrimary"
    android:padding="32dp" >

    <ImageView
        android:id="@+id/logoImageView"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/secondary_lb"
        android:contentDescription="@string/cleanstreets_logo" />

    <EditText
        android:id="@+id/editTextReply"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_centerHorizontal="true"
        android:backgroundTint="#807A77"
        android:textColorHint="#807A77"
        android:layout_marginTop="188dp"
        android:textColor="@color/colorPrimaryDark"
        android:hint="@string/type_your_reply_here_be_nice"
        android:inputType="text"
        android:autofillHints="text" />

    <Button
        android:id="@+id/buttonSendReply"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/editTextReply"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:textSize="25sp"
        android:textStyle="bold"
        android:background="@drawable/round_corner"
        android:textColor="@color/colorSecondary"
        app:backgroundTint="@color/colorPrimaryDark"
        android:text="@string/send_reply"/>

</RelativeLayout>
