<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/colorPrimary">

    <ImageView
        android:id="@+id/logoImageView"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:src="@drawable/secondary_lb"
        android:contentDescription="@string/cleanstreets_logo" />

    <TextView
        android:id="@+id/title_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/noticeboard"
        android:textColor="@color/colorPrimaryDark"
        android:background="@color/colorPrimary"
        android:textSize="25sp"
        android:textAlignment="center" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/post_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/colorPrimary"
        android:padding="16dp"
        android:visibility="visible"/>

    <Button
        android:id="@+id/add_post_button"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="10dp"
        android:text="@string/add_post"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:backgroundTint="@color/thirdColor"
        android:background="@drawable/round_corner"
        android:textSize="26sp"/>

</LinearLayout>